
namespace java com.twitter.finagle.demo

service Tracing1 {
  string computeSomething();
}

service Tracing2 {
  string computeSomethingElse();
}

service Tracing3 {
  string oneMoreThingToCompute();
}